# Photonic-Waveguide

./: README.md  pyproject.toml  requirements.txt
data/: README.md  download_dataset.py
infrastructure/cdk/: app.py
infrastructure/cdk/stacks/: agent_stack.py  data_stack.py  observability_stack.py
infrastructure/cloudformation/: agentcore-stack.yaml  bedrock-agent-stack.yaml  data-stack.yaml  storage-stack.yaml
infrastructure/docker/: Dockerfile  docker-compose.yml
mcp_server/: __init__.py  config.py  server.py
mcp_server/schemas/: waveguide.py
mcp_server/storage/: __init__.py  cache.py  s3_dataset.py  s3_tables.py
mcp_server/tools/: __init__.py  inverse_design.py  mask_gen.py  mode_solver.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_agent_demo.ipynb
scripts/: deploy_agentcore.sh  run_evals.sh  setup_aws.sh
src/: __init__.py
src/agents/: __init__.py  analysis_agent.py  optimization_agent.py  photonic_agent.py  prediction_agent.py  system_prompts.py
src/config/: agent_config.py  aws_config.py
src/knowledge_base/: __init__.py
src/models/: __init__.py  evaluate.py  serve.py  train.py
src/tools/: __init__.py  data_tools.py  mask_tools.py  optimization_tools.py  physics_tools.py  prediction_tools.py  visualization_tools.py
tests/: test_agents.py  test_mcp_integration.py  test_mcp_server.py  test_predictions.py  test_storage.py  test_tools.py
tests/evals/: eval_config.yaml  eval_scenarios.json
